fix z-index sull'input

--- a/web/portals/webclient/src/assets/scss/_common.scss
+++ b/web/portals/webclient/src/assets/scss/_common.scss
@@ -84,6 +84,7 @@ html, body {
         width: 100%;
         height: 30px;
         line-height: 1;
+        z-index: 2;
         
     }
     button[type="button"] {
